--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -200,3 +200,21 @@
  xun_chengcheng_tea_desc: "Some say there are thousand varieties of tea spread across Hengtua. Many of those are just variants of some more popular and general brews, but tea harvested near the city of Chengcheng is easily recognized and famed across the whole Tsinhoi. It owes its renown to the strong, but somewhat sweet taste."
  xun_land_of_many_beliefs: "Land of Many Beliefs"
  xun_land_of_many_beliefs_desc: "While most core lands of Xun are compromised of traditional spirit believers, the northern hinterlands sometimes include elements of Samadian folk religions and Gajifeng people vastly continue their dedication to shrines and old tales. This led to not only our government, but also our people to be more tolerant of someone with a different worldview."
+
+ lameng_ideas: "Lamengian Ideas"
+ lameng_ideas_bonus: "Lamengian Ambition"
+ lameng_ideas_start: "Lamengian Traditions"
+ lameng_memories_of_lamhoi: "Memories of Lamhoi"
+ lameng_memories_of_lamhoi_desc: "The island across the sea - Lamhoi - is still what many call their ancestral home. The rise of the tyrannical rule 8 centuries ago and subsequent persecution of scholars and scribes led to many of us to flee to the young northern colonies."
+ lameng_great_alliance: "Great Alliance"
+ lameng_great_alliance_desc: "At first, most of the cities coexisted independently, rarely leaving the comforts of the walled towns. The first real incentive to unite was continuously growing power of the southern tyrants and even kingdom of Heisean in the east. This led to establishment of the first alliance, followed by second and later conquests of remaining cities."
+ lameng_local_garrisons: "Local Garrisons"
+ lameng_local_garrisons_desc: "Despite the semi-unified government, every city still wants to preserve their own garrison. While taxing on the overall manpower reservers of our nation, this can be helpful during wartime when our military needs instant reinforcements."
+ lameng_xiashan_border: "Xiashan Border"
+ lameng_xiashan_border_desc: "Our republic sits in a very favorable position, being overwhelmingly densely forested hills. To the north protects us the Xiashan mountain chain, which historically prevented major nomadic incursions. This natural advantage allows us to more easily manage large arrays of fortifications across the border."
+ lameng_trade_with_weixiao: "Trade with Weixiao"
+ lameng_trade_with_weixiao_desc: "Since the fall of the Bunelisuli empire, the Weixiao is somewhat in a turmoil, with warlords and khans all trying to claim and throne of the khagan. This chaos hasn't stopped neither our merchants from selling Hengtuan goods and their people from buying them. While roads may be more dangerous, the profit is also greater."
+ lameng_seventeen_cities_of_the_republic: "The Seventeen Cities"
+ lameng_seventeen_cities_of_the_republic_desc: "The majority of our economic prowess comes from the seventeen biggest cities of the republic, which are inhabited by over 50% of the population. They serve not only as administrative or production centers, but they are also vital to keeping commerce flowing and loyalty in check."
+ lameng_waiguren_exiles: "Waiguren Exiles"
+ lameng_waiguren_exiles_desc: "First wave of intellectuals came from Tsinhoi, but now due to another tyrannical government rising in the west, the people of Zimahei are slowly turning their eyes towards us, the shining beacon of knowledge in increasingly absolutist world."
