fixes and reforms

--- a/localisation/TD_01_flavour_hestan_l_english.yml
+++ b/localisation/TD_01_flavour_hestan_l_english.yml
@@ -134,3 +134,6 @@
 
  follows_higher_deity: "Follows Higher Deity"
  follows_lower_deity: "Follows Lower Deity"
+
+ kakatachian_empire_reform: "Kakatachian Empire"
+ kakatachian_empire_reform_desc: "The unified kingdom of Fadi and Rasus is also known as Kakatachia, the first successful unitary state controlling the entire region."
