--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -619,6 +619,7 @@
  disaster_sis_decay.14.desc: "Diplomacy was an important part of ruling the empire during the monarchical era, but it's not enough during times where our subjects don't trust our judgement. Despite this, it might actually be beneficial to remove some envoys, who were greatly rewarded due to their dynastic ties."
  disaster_sis_decay.14.a: "Expand the Legatorum"
  TD_SIS_Expand_The_Legatorum: "Expanded the Legatorum"
+ desc_TD_SIS_Expand_The_Legatorum: "The Legatorum now serves a much more vital role in the empire, often solving complex internal issues."
  TD_SIS_Expand_The_Legatorum_subjects: "Expanded the Legatorum"
  disaster_sis_decay.14.b: "Remove Obsolete Functions"
  TD_SIS_Removed_obsolete_functions: "Removed Obsolete Functions"
