--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -5882,7 +5882,7 @@
  desc_loyalist_stronghold: "This province is full of true believing Tories who are loyal to the proper government, they must be protected."
  ANY_CORE_STARTS: "Any Core Country"
  advancement_of_true_religion_act_title: "Pass Advancement of Religion Act"
- advancement_of_true_religion_act_desc: "Make it a legal offense for servants and the like to read our holy bible, reserve that right for clerics and noblemen."
+ advancement_of_true_religion_act_desc: "Make it a legal offense for uncertified and the like to interpret the divine texts, reserve that right for imperial clerics and noblemen."
  blasphemy_act_title: "Pass Blasphemy Act"
  blasphemy_act_desc: "Declare blasphemy a common law and thereby make it a legal offense to show contempt for or ridicule God, Jesus or the Holy Scriptures in any form or way."
  act_of_uniformity_title: "Pass Act of Uniformity"
