--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -147,3 +147,10 @@
 
  isolationist_monarchy_reform: "Isolationist Monarchy"
  isolationist_monarchy_reform_desc: "Our ruler don't want communicate with other states to maintain security over its domain. Because of that we don't have a lot of state personel that can govern any additional lands."
+
+ manufacturing_monopoly_reform: "Manufacturing Monopolies"
+ manufacturing_monopoly_reform_desc: "Our burghers earned the right to be sole providers of advanced goods such as glass, jewelry, tools, textiles and valuable gems."
+ mechanic_better_monopolies_yes: "[Root.GetBurghersName] monopoly privileges will have double mercantilism and will reduce cost of increasing mercantilism."
+
+ khumaraati_auxiliaries_reform: "Khumaraati Auxiliaries"
+ khumaraati_auxiliaries_reform_desc: "Many Khumaraatis are loyal to the khan and will always serve him to their fullest potential. Many times they were a great help, especially in the wars against Ibliguz and raids in Watlistan."
