gov changes and fixes

--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -150,7 +150,7 @@
 
  manufacturing_monopoly_reform: "Manufacturing Monopolies"
  manufacturing_monopoly_reform_desc: "Our burghers earned the right to be sole providers of advanced goods such as glass, jewelry, tools, textiles and valuable gems."
- mechanic_better_monopolies_yes: "[Root.GetBurghersName] monopoly privileges will have double mercantilism and will reduce cost of increasing mercantilism."
+ mechanic_better_burgher_monopolies_yes: "[Root.GetBurghersName] monopoly privileges will have doubled mercantilism and reduced cost of increasing mercantilism."
 
  khumaraati_auxiliaries_reform: "Khumaraati Auxiliaries"
  khumaraati_auxiliaries_reform_desc: "Many Khumaraatis are loyal to the khan and will always serve him to their fullest potential. Many times they were a great help, especially in the wars against Ibliguz and raids in Watlistan."
