--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2208,7 +2208,7 @@
  PROV2207: "2207"
  PROV2208: "2208"
  PROV2209: "Naneg"
- PROV2210: "2210"
+ PROV2210: "Bavgania" #bear forest
  PROV2211: "Dakhalbum"
  PROV2212: "Lake Harold"
  PROV2213: "2213"
@@ -3149,7 +3149,7 @@
  PROV3148: "3148"
  PROV3149: "Ginisalk"
  PROV3150: "Enkude"
- PROV3151: "3151"
+ PROV3151: "Bavgania"
  PROV3152: "3152"
  PROV3153: "Tsenkhargin"
  PROV3154: "Giykabam"
