cleanup + map changes

--- a/localisation/TD_03_missions_wedla_l_english.yml
+++ b/localisation/TD_03_missions_wedla_l_english.yml
@@ -27,15 +27,20 @@
 
 
  WED_project_our_power: "Project Our Power"
+ desc_WED_project_our_power: "Our people are eager to show the world our strength."
  WED_restore_whats_ours_tt: "Gain permanent claim on every province of §YZiemelian§! culture."
  WED_mezonian_monopoly: "Mezonian Monopoly"
+ desc_WED_mezonian_monopoly: "We have absolute control over trade flowing through the Mezonian Straits."
  WED_control_over_mezonia_tt1: "Gain claims on every coastal Center of Trade and Estuary around §YFurmaric Sea§!."
  WED_overlords_of_furmaria: "Overlords of Furmaria"
+ desc_WED_overlords_of_furmaria: "Furmaria is ours for the taking, without anyone being able to stop us."
  WED_western_bretherens_tt1: "Gain claims on every province owned by Bogiland or its subjects in §YBogiland§! region."
  WED_western_bretherens_tt2: "Every subject of §YBogilish§! culture will get §G-10%§! §YLiberty Desire§!."
  WED_northern_cities: "Northern Cities"
+ desc_WED_northern_cities: "Crown of the Ostsee will continue bringing us prestige."
  WED_cities_of_ostemer_tt1: "If §YBurghers§! estate loyalty is §Y70§! or greater:"
  WED_economic_boom: "Economic Boom"
+ desc_WED_economic_boom: "Cooperation with the urban merchant class led to the increased economic output across the nation."
  WED_the_question_of_drotaci_tt1: "If completed by appeasing the Nobility:"
  WED_the_question_of_drotaci_tt2: "If completed by weakening the Nobility:"
  WED_dominated_the_drotaci: "Dominated the Drotaci"
