--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -916,3 +916,5 @@
  antawil_area: "Antawil"
  kahnar_area: "Kahnar"
  aragsin_area: "Aragsin"
+ bosonapan_sea_area: "Bosonapan Sea"
+ barfadan_area: "Barfadan"
