--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4413,12 +4413,12 @@
  PROV4412: "4412"
  PROV4413: "4413"
  PROV4414: "4414"
- PROV4415: "4415"
- PROV4416: "4416"
- PROV4417: "4417"
- PROV4418: "4418"
- PROV4419: "4419"
- PROV4420: "4420"
+ PROV4415: "Abrishram"
+ PROV4416: "Darband"
+ PROV4417: "Dosabalen"
+ PROV4418: "Malagosans"
+ PROV4419: "Riknisgar"
+ PROV4420: "Aghmoslavetia"
  PROV4421: "4421"
  PROV4422: "4422"
  PROV4423: "4423"
