--- a/localisation/TD_tradegoods_l_english.yml
+++ b/localisation/TD_tradegoods_l_english.yml
@@ -59,5 +59,5 @@
  gemsDESC: "Since the earliest times, stones such as rubies, sapphires, diamonds, emeralds, jade, or pearls, have been used in jewelry and ceremonial attire. While not all precious stones are as rare, they are all highly sought after commodities."
  coal: "Coal"
  coalDESC: "Coal has a long history as a source of fuel, but it is not until the invention and dissemination of the practical Steam Engine that demand would take off. As the Industrial Revolution swept across the World, the use and export or import of coal would become a major business and an integral part of a modern economy."
- cloves: "Cloves" #todo
- #clovesDESC: "Clove is a very valuable spice, native to the Maluku Islands in Indonesia, that has been the center of several wars to control its production. Cloves are the aromatic flower buds that are harvested when those buds transition to a bright red from an original pale hue. Cloves are extensively used in cuisines from Asia to the Mediterranean, and to America via colonization."
+ cloves: "Cloves"
+ clovesDESC: "Clove is a very valuable spice, native to the Pankati Islands in Cakrawalunia, that has been the center of several wars to control its production. Cloves are the aromatic flower buds that are harvested when those buds transition to a bright red from an original pale hue. Cloves are extensively used in cuisines from Pemenia to the Maqitan, and to new world via colonization."
