--- a/localisation/TD_01_flavour_wasichantlia_l_english.yml
+++ b/localisation/TD_01_flavour_wasichantlia_l_english.yml
@@ -87,3 +87,21 @@
  lummak_maquchan_trade_desc: "People of Achiqnatar were the kindest of our neighbors for the most part. Our cocoa fruits and obsidian is often sold for their metals and llamas."
  lummak_eastern_newcomers: "Eastern Newcomers"
  lummak_eastern_newcomers_desc: "The second coming of the sea people was a surprise for many. While they once again brought destruction, there is no doubt that they are far more technologically advanced. If we want to even stand a chance against them, we need to first study their ways."
+
+ tonatitlan_ideas: "Tonatitlani Ideas"
+ tonatitlan_ideas_bonus: "Tonatitlani Ambition"
+ tonatitlan_ideas_start: "Tonatitlani Traditions"
+ tonatitlan_people_of_the_west: "People of the West"
+ tonatitlan_people_of_the_west_desc: "Many tell stories of our ancestors, which forced out of their homeland by evil giants migrated east, finally reaching the bountiful lands of the sun - Tonatitlan. We lost many aspects of our culture, but our spirit and fervor remains."
+ tonatitlan_legacy_of_teotlahueli: "Legacy of Teotlahueli"
+ tonatitlan_legacy_of_teotlahueli_desc: "The teotloqitl, meaning Gods' rage, was a crisis in the 7th century which caused the collapse of the then great Tonatitlazoltec. Ever since these days, people of these lands live in fear of the gods descending once again to wipe humanity from the face of Earth."
+ tonatitlan_fear_and_despair: "Fear and Despair"
+ tonatitlan_fear_and_despair_desc: "Our enemies not only fear the gods, but also our soldiers. Our brave men cause widespread panic among our enemies, which abandon their posts in haste, knowing the certainty of their death. However those which try to fight against are quickly defeated, and sacrificed for the greater good."
+ tonatitlan_prosperity_of_nanatoyatl: "Prosperity of Nanatoyatl"
+ tonatitlan_prosperity_of_nanatoyatl_desc: "Wasichantlian nations mostly lived either deep in the jungle or in fertile Tonatixco, but these lands have been left barren for generations. We found that the western river, known as Nanatoyatl, was much more fertile and virgin, allowing us to sustain our large population and hold of these lands."
+ tonatitlan_new_world_splendor: "New World Splendors"
+ tonatitlan_new_world_splendor_desc: "When easterners came to our land, they were in awe of what we have created. They especially liked the glittering golden and obsidian frames which decorate our buildings and silver jewelry our women wear. Every time a new merchant visits our ports, they immediately wish they could control these prosperous lands."
+ tonatitlan_lummak_merits: "Lummak Merits"
+ tonatitlan_lummak_merits_desc: "People of the Lummak forest often avoid interacting with us, mostly focusing on diplomacy and trade between themselves or the far south. Despite this, many of their bright minds live at our courts and serve the sun empire."
+ tonatitlan_taedian_merchants: "Taedian Merchants"
+ tonatitlan_taedian_merchants_desc: "The merchants from a distant continent of Taedium often visit our ports, wanting to not only to trade, but also learn about our people, our land and resources. They travel our long roads. Our court beliefs that they will lead us to global glory and nothing bad will ever come out of it."
