cultural changes and fixes

--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -102,7 +102,7 @@
  nabhin_ceafiltan_harbor: "Ceafiltan Harbor"
  nabhin_ceafiltan_harbor_desc: "Jagged and high coasts of Nabhin often cause more problems than they solve. For most of our history only in few selected places, one of such being the town of Ceafilta which, alongside Beneul, is the backbone of our economy."
  nabhin_seamen_of_the_north: "Seamen of the North"
- nabhin_seamen_of_the_north_desc: "Large swats of mountainous land unsuitable for agriculture has caused most of our population to concentrate around the coasts and live of off the sea."
+ nabhin_seamen_of_the_north_desc: "Large swaths of mountainous land unsuitable for agriculture has caused most of our population to concentrate around the coasts and live of off the sea."
  nabhin_reinforced_royal_authority: "Reinforced Royal Authority"
  nabhin_reinforced_royal_authority_desc: "To protect the royal interest from particularism, king Escual began the process of cracking down on noble privileges. While the seven families still had a major influence over the country, their power was slowly diminishing at the expense of the monarch."
  nabhin_tarhian_fur: "Tarhian Fur"
