--- a/localisation/TD_01_flavour_camaria_l_english.yml
+++ b/localisation/TD_01_flavour_camaria_l_english.yml
@@ -54,6 +54,6 @@
  desc_fresh_gold_vein: "This province is prospering due to large newly found gold vein."
 
  fattoria_nobiliare_reform: "Fattoria Nobiliare"
- fattoria_nobiliare_reform_desc: "Large swats of arable land with at most 2 types of different crops owned by the nobles are more efficient in maintaining high level of production than smaller estates."
+ fattoria_nobiliare_reform_desc: "Large swaths of arable land with at most 2 types of different crops owned by the nobles are more efficient in maintaining high level of production than smaller estates."
 
  CAP_left_league: "Left our League"
