--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -63,7 +63,7 @@
  steppe_unexploited_lands: "Unexploited Lands"
  steppe_unexploited_lands_desc: "While the Gisian basin itself was densely populated, rest of the steppe remained largely untouched by human hands. This virgin land holds many treasures that wait for us to discover them."
  steppe_horde_administration: "Horde Administration"
- steppe_horde_administration_desc: "While administration might not be the right word to describe internal situation of the hordes, it still effectively manages to hold and maintain large swats of land with relatively small autonomy."
+ steppe_horde_administration_desc: "While administration might not be the right word to describe internal situation of the hordes, it still effectively manages to hold and maintain large swaths of land with relatively small autonomy."
 
  absorb_lesser_hordes_title: "Absorb Lesser Horde"
  absorb_lesser_hordes_desc: "Force a nomad nation to integrate into our horde.\n If they accept, they will become our vassal."
