--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -630,7 +630,7 @@
  SIS_DECAY_We_will_reform_the_legatorum_tt: "§GWe will finish Reforming the Legatorum Institutions§!"
  
  disaster_sis_decay.15.t: "Economical Reform in the Empire"
- disaster_sis_decay.15.desc: "Managing large swats of land with different demands, soils and landscapes is quite a strain. Depleting silver mines, failing crops, dilapidated infrastructure and burgher greed are slowly, but surely, damaging the empire."
+ disaster_sis_decay.15.desc: "Managing large swaths of land with different demands, soils and landscapes is quite a strain. Depleting silver mines, failing crops, dilapidated infrastructure and burgher greed are slowly, but surely, damaging the empire."
  disaster_sis_decay.15.a: "Institute new Currency"
  TD_SIS_Instituted_New_Currency: "Instituted New Currency"
  disaster_sis_decay.15.b: "Establish new Mint"
