--- a/localisation/TD_01_flavour_wedla_l_english.yml
+++ b/localisation/TD_01_flavour_wedla_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  wedla.2.t: "The World's Greatest Chocolate"
- wedla.2.desc: "Ever since its introduction to the western world chocolate took it by storm. It quickly spread to courts of Narbona, Capiranella, Argenia and even the Saelian Empire, where it was seen as a luxurious drink elevating the status of the nobility even more above the typical peasant.\n\nThe best chocolate, however, is produced by us. Prince Karol Ethel, member of the [Root.Monarch.GetName] family, managed to attain great swats of land where he produces the famous Wedlan chocolate. The most popular version is sold with vanilla extract, but many prefer to drink it with honey, sugar and even paprika."
+ wedla.2.desc: "Ever since its introduction to the western world chocolate took it by storm. It quickly spread to courts of Narbona, Capiranella, Argenia and even the Saelian Empire, where it was seen as a luxurious drink elevating the status of the nobility even more above the typical peasant.\n\nThe best chocolate, however, is produced by us. Prince Karol Ethel, member of the [Root.Monarch.GetName] family, managed to attain great swaths of land where he produces the famous Wedlan chocolate. The most popular version is sold with vanilla extract, but many prefer to drink it with honey, sugar and even paprika."
  wedla.2.a: "Leave some for me!"
  WED_wedlan_chocolate: "Wedlan Chocolate"
  wedla.3.t: "Togawian Jewelry"
