--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -368,6 +368,10 @@
  ziahei: "Ziahei"
  xun: "Xun"
  waiguren: "Waiguren"
+ qishan: "Qishan"
+ chui: "Chui"
+ xiashan: "Xiashan"
+ shi: "Shi"
 
  khumaarati_group: "Khumaarati"
  kutgar: "Kutgar"
