--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -166,7 +166,7 @@
  dashavi_coastal_settlements: "Coastal Settlements"
  dashavi_coastal_settlements_desc: "Coastal settlements along our coast are few predominately fishing villages, but our great cities prove that it's not amount but the quality that matters. Kolondax, Huniyagar and Kistanzar compromise of large merchant castes and are vital to the naval prowess of our nation."
  dashavi_asamani_liberty: "Asamani Liberty"
- dashavi_asamani_liberty_desc: "Asamans were given large swats of land during the reign of Nezam Varazahan. This cascaded with even more privileges and in the current day the hold majority of power in the nation."
+ dashavi_asamani_liberty_desc: "Asamans were given large swaths of land during the reign of Nezam Varazahan. This cascaded with even more privileges and in the current day the hold majority of power in the nation."
  dashavi_national_zealotry: "National Zealotry"
  dashavi_national_zealotry_desc: "Being underdog for most of history and only seen as a transitory region between 2 great civilizations, our people started to build a new national identity, mixing many Maqitan cultures and values, building something new and great."
 
