--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -237,3 +237,21 @@ daimin_reformed_writing_system_desc: "In the seventeenth century, with the influ
 daimin_hangchan_trade: "City of Many Merchants"
 daimin_hangchan_trade_desc: "Daifan had become a known trade hub across the Hangchan islands, with many Taedians establishing quarters within the city. With major trade goods on Daimin such as Daifan porcelain and Yapping tea, many foreign traders made it a priority to establish good relations with the Dai dynasty for the access to trade with their exotic goods."
 
+luetan_group_ideas: "Luetan Ideas"
+luetan_group_ideas_bonus: "Luetan Ambition"
+luetan_group_ideas_start: "Luetan Traditions"
+luetan_embellished_blades: "Embellished Blades"
+luetan_embellished_blades_desc: "It is a tradition to etch writing into all kinds of blades, whether they be to name them, describe legends from local folk stories or the families of the owners. These blades are held dear to their wielders, well maintained and further decorated with gemstones, with many new inscriptions added after winning a battle or securing a kill while hunting."
+luetan_bounties_of_hau_chuung: "Bounties of Hau-Chuung"
+luetan_bounties_of_the_rivers_desc: "The Hau-Chuung river has many tributaries coming down the two mountain ranges surrounding the Tsutan Rainforest, providing vital drinking water, but also many other useful resources. From great amounts of clay for building up towns to glistening gemstones like jasper and agate for jewellery and adornments."
+luetan_valley_of_a_hundred_shrines: "Valley of a Hundred Shrines"
+luetan_valley_of_a_hundred_shrines_desc: "In the vast expanse of the valley, there are over a hundred shrines dedicated to local spirits built close to natural holy sites. The spirits worshipped vary even in shrines located close together, with beliefs changing along with them. The spirits are viewed in high reverence as many are believed to contribute to the beauty and abundance of nature around them."
+luetan_wooden_carvings: "Wooden Carvings"
+luetan_wooden_carvings_desc: "A large number of different trees grow in Tsutan, with each having distinct colours and patterns that give artists and carpenters many opportunities. From carving detailed statuettes of spirits to be placed on shrines, to creating elaborate furniture sold to merchants abroad, the skill of wood carving has been the largest art form in the valley for all to enjoy."
+luetan_concealed_towns: "Concealed Towns"
+luetan_concealed_towns_desc: "In the hilly, dense rainforests there are not too many open clearings to build vast cities, however, it allows communities to live in protected nooks that give security against enemies as well as wild animals. It takes skilled pathfinders to track down such towns as it is not walls that conceal the townsfolk, but rather thick treelines and mountains."
+luetan_nothing_to_waste: "Nothing to Waste"
+luetan_nothing_to_waste_desc: "Respecting nature is a core value among the Luetan, and wasting anything that nature provides to them is a great offence. From bones and horns of animals to food and even building materials, all things are found a use for whether it be exotic or mundane."
+luetan_naval_resurgence: "Naval Resurgence"
+luetan_naval_resurgence_desc: "River barges have made it easy to traverse vast amounts of resources quickly compared to using pack animals or carriages, allowing for expanded trade and travel all across the land. While in the past our ancestors once sailed on the coasts of Tsutan, their knowledge has still come useful further inland and perhaps in the future we will sail the waves once more."
+
