--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3318,9 +3318,9 @@
  PROV3317: "Quangao"
  PROV3318: "Desheng"
  PROV3319: "Qudong"
- PROV3320: "3320"
+ PROV3320: "Lushan"
  PROV3321: "3321"
- PROV3322: "3322"
+ PROV3322: "Caoshan"
  PROV3323: "Caoshan"
  PROV3324: "Xianing"
  PROV3325: "Mojan"
