--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1381,5 +1381,15 @@
  TSC: "Tosecha"
  TSC_ADJ: "Tosechan"
 
- BAF:0 "Barfadan"
- BAF_ADJ:0 "Barfadian"
+ BAF: "Barfadan"
+ BAF_ADJ: "Barfadian"
+ AKR: "Akreach"
+ AKR_ADJ: "Akreachani"
+ LEK: "Lekhum"
+ LEK_ADJ: "Lekhumi"
+ NEI: "Neirueng"
+ NEI_ADJ: "Neiruengi"
+ PHA: "Phapnet"
+ PHA_ADJ: "Phapneti"
+ SNI: "Santibat"
+ SNI_ADJ: "Santibati"
