--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -237,9 +237,9 @@ daimin_reformed_writing_system_desc: "In the seventeenth century, with the influ
 daimin_hangchan_trade: "City of Many Merchants"
 daimin_hangchan_trade_desc: "Daifan had become a known trade hub across the Hangchan islands, with many Taedians establishing quarters within the city. With major trade goods on Daimin such as Daifan porcelain and Yapping tea, many foreign traders made it a priority to establish good relations with the Dai dynasty for the access to trade with their exotic goods."
 
-luetan_group_ideas: "Luetan Ideas"
-luetan_group_ideas_bonus: "Luetan Ambition"
-luetan_group_ideas_start: "Luetan Traditions"
+luetan_group_ideas: "Luetan Minor Ideas"
+luetan_group_ideas_bonus: "Luetan Minor Ambition"
+luetan_group_ideas_start: "Luetan Minor Traditions"
 luetan_embellished_blades: "Embellished Blades"
 luetan_embellished_blades_desc: "It is a tradition to etch writing into all kinds of blades, whether they be to name them, describe legends from local folk stories or the families of the owners. These blades are held dear to their wielders, well maintained and further decorated with gemstones, with many new inscriptions added after winning a battle or securing a kill while hunting."
 luetan_bounties_of_hau_chuung: "Bounties of Hau-Chuung"
