west sahila setup

--- a/localisation/TD_rebels_l_english.yml
+++ b/localisation/TD_rebels_l_english.yml
@@ -37,7 +37,7 @@
  achiqnay_rebels_name: "Achiqnay Rebels"
  agellidian_rebels_name: "Agellidian Rebels"
  gajifeng_spiritualism_rebels_name: "Gajifeng Spiritualism Rebels"
- khutigar_shamanism_rebels_name: "Khutigar Shamanism Rebels"
+ khutigar_shamanism_rebels_name: "Bavganian Shamanism Rebels"
  wirosepan_rebels_name: "Wirosepan Rebels"
  xianga_rebels_name: "Xianga Rebels"
  xifang_rebels_name: "Xifang Rebels"
