--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1393,3 +1393,28 @@
  PHA_ADJ: "Phapneti"
  SNI: "Santibat"
  SNI_ADJ: "Santibati"
+
+ SAO: "Sanooma"
+ SAO_ADJ: "Sanooman"
+ MBA: "Mbalan"
+ MBA_ADJ: "Mbalani"
+ DEM: "Demdeeni"
+ DEM_ADJ: "Demdeenian"
+ DOT: "Douta"
+ DOT_ADJ: "Doutan"
+ RAB: "Rabaeh"
+ RAB_ADJ: "Rabaehi"
+ TAP: "Tampiir"
+ TAP_ADJ: "Tampiiri"
+ BEN: "Bendrepa"
+ BEN_ADJ: "Bendrepan"
+ KUE: "Kulbeong"
+ KUE_ADJ: "Kulbeongian"
+ HUU: "Huudaje"
+ HUU_ADJ: "Huudajen"
+ TEN: "Tenjinee"
+ TEN_ADJ: "Tenjinian"
+ TAK: "Tanka"
+ TAK_ADJ: "Tankan"
+ SLB: "Saalbajon"
+ SLB_ADJ: "Saalbajoni"
