--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -127,7 +127,8 @@
  sointuva_rebels_army: "$RELIGION$ Army"
  sointuva_rebels_demand: "Convert $COUNTRYNAME$"
 
- khutigar_shamanism: "Khutigar Shamanism"
+ khutigar_shamanism: "Bavganian Shamanism"
+ khutigar_shamanism_religion_desc: "Various localized shamanistic beliefs of Bavgania, Khutigaria and Bugtang often revolve around forest spirits lead by the moon god."
  khutigar_shamanism_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  khutigar_shamanism_rebels_title: "Religious"
  khutigar_shamanism_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
@@ -141,6 +142,7 @@
  samadio_taedian: "Samadio-Taedian"
 
  marstonic_pantheon: "Marstonic Pantheon"
+ marstonic_pantheon_religion_desc: "Zbojano-Marstonian pantheon of gods was wildly practiced in north-eastern taedium until the arrival of Saelianism. They believe in a court of gods led by Dievo, god of power and loyalty. Many of their myths revolve around struggle of a man against nature and divine punishment."
  marstonic_pantheon_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  marstonic_pantheon_rebels_title: "Religious"
  marstonic_pantheon_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
