--- a/localisation/TD_01_Flavour_eopedian_l_english.yml
+++ b/localisation/TD_01_Flavour_eopedian_l_english.yml
@@ -32,7 +32,7 @@
  estate_church_uttarian_political_rights_rt: "Uttarian provinces will lose \n§Y-75.0%§! Local Religious Unity Contribution and §R+10.00§! Minimum Autonomy."
 
  incident_ehsani_resurgence_title: "Ehšani Resurgence"
- incident_ehsani_resurgence_desc: "Growing influence of Ehšan Tiri has not only heavily influenced the modern Uttarian religion, but also shook the REopedianWorld."
+ incident_ehsani_resurgence_desc: "Growing influence of Ehšan Tiri has not only heavily influenced the modern Uttarian religion, but also shook the entire Eopedian World."
  incident_teachings_of_aurang_title: "Teachings of Aurang"
  incident_teachings_of_aurang_desc: ""
  incident_devilish_dust_title: "Devilish Dust"
