--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -220,7 +220,7 @@
  lameng_waiguren_exiles_desc: "First wave of intellectuals came from Tsinhoi, but now due to another tyrannical government rising in the west, the people of Zimahei are slowly turning their eyes towards us, the shining beacon of knowledge in increasingly absolutist world."
 
 daimin_ideas: "Daimin Ideas"
-daimin_bonus: "Daimin Ambition"
+daimin_ideas_bonus: "Daimin Ambition"
 daimin_ideas_start: "Daimin Traditions"
 daimin_court_of_a_thousand_schools: "Court of a Thousand Schools"
 daimin_court_of_a_thousand_schools_desc: "With long lasting stability and prosperity on the island of Daimin, many philosophical schools have been established in all corners of the lands to discuss the most important questions of life. Many of the courtiers in Daifan Palace have studied in the various schools, providing the Zhuquan and the state vital advisors in all stately matters.\n\nSome of the most distinguished schools in Daimin are Haanping's School of Diplomacy, Jung Ning's School of Philosopher Kings and Je Zhen's School of Natural Social Order. Many of the schools had made it a tradition to drink Yapping tea before grand debates and discussions."
@@ -255,3 +255,20 @@ luetan_nothing_to_waste_desc: "Respecting nature is a core value among the Lueta
 luetan_naval_resurgence: "Naval Resurgence"
 luetan_naval_resurgence_desc: "River barges have made it easy to traverse vast amounts of resources quickly compared to using pack animals or carriages, allowing for expanded trade and travel all across the land. While in the past our ancestors once sailed on the coasts of Tsutan, their knowledge has still come useful further inland and perhaps in the future we will sail the waves once more."
 
+bulghaen_ideas: "Bulghaen Ideas"
+bulghaen_ideas_bonus: "Bulghaen Ambition"
+bulghaen_ideas_start: "Bulghaen Traditions"
+bulghaen_three_thousand_armed_men: "Three Thousand Armed Men"
+bulghaen_three_thousand_armed_men_desc: ""Three thousand armed men, their blades of steel\nMarched to the shore, where waves would kneel."\n-excerpt from The Tides of Hangchan, written by Yujihadga Yu Yul-Sun.\n\nThe first arrival of the Heisean empire upon the shores of Moongma was described with a large show of force of a legendary army carving out an area for a new colony, as a gift to the Heisean Emperor. Their story is well remembered by our military who strive to bring the mythical imagery to the eyes of their enemies."
+bulghaen_bungi_haven: "Bungi Haven"
+bulghaen_bungi_haven_desc: "Fleeing from the horrors of the bungi wars on the northern mainland, many refugees arrived on our shores seeking safety. This influx of a Heisen populace has substantially aided in the administration and expansion of the kingdom, especially since many skilled courtiers joined the royal court. With experience of managing larger nations on the mainland, they have assisted in matters we have little experience in, granting us valuable knowledge for the courts to come."
+bulghaen_guyunha: "Guyunha"
+bulghaen_guyunha_desc: "The steep cliffs surrounding the Guyunha Strait, the Heisen name for the Guang Strait, make an extremely narrow passage for ships to pass through, providing great opportunities for land forces to aid the navy below. Offensively, large stones, arrows or quicklime are fired down onto enemies as they struggle to navigate the tight strait, often causing a chain reaction of many vessels crashing and their crew thrown overboard."
+bulghaen_ox_king_palace: "Ox King Palace"
+bulghaen_ox_king_palace_desc: "Once the Heisen Empire fell, the lands were in disarray, with new kings in the mainland grasping for control over the remnants. Poor and lacking many trade partners, the early kings of Bulghaen struggled to control the former colony and lacked much popular support. This changed with the reign of the Ox King, one said to be very tall with the physique of an ox that began many building projects on the fledgling kingdom.\n\nConstructing new ports, farms and his large palace near Heomdan in the Kwaashan Mountains, he was revered by both the courtiers and the populace, being an exemplar of the Hujiming school. A statue was erected after his death and placed in the centre of the palace courtyard with a depiction of large ox horns to illustrate his epithet."
+bulghaen_daisalam_colonization: "Daisalam Colonization"
+bulghaen_daisalam_colonization_desc: "To many, the coasts dominated by steep cliffs on eastern Moongma were seen as uninhabitable, due to the difficulty of traversal and no attempt of mapping. This changed with the Heisean Empire, as an attempt was started in 102 AI to establish a colony on the island chain south of the mainland. With a great knowledge of cartography from a land with similar geography, eastern Moongma was charted and soon populated with the people now known as the Daisalam."
+bulghaen_huangche_syncretism: "Huangche Syncretism"
+bulghaen_huangche_syncretism_desc: " The spirits worshipped by the Huangche have also been accepted by the Daisalam, giving respect to the land they now live in. Local shrines were maintained and beliefs were adopted as the old cults still survived, leaving strained relations between the natives and colonists stable. The most notable spirit to the worshipped is the guarding spirit of Shaantin island which is often depicted as a majestic peacock, later adopted by Bulghaen as the national symbol."
+bulghaen_northern_xifang_sects: "Northern Xifang Sects"
+bulghaen_northern_xifang_sects_desc: "Bulghaen has long respected many local faiths on our lands and with the growth of the Xifang sects as migrants arrived. Since the Xifang still respect the local folklore of our lands, there have not been many conflicts between the differing faiths, allowing for discourse and philosophy to flourish especially in the urban centers of the nation. Arriving from mainland Heisean, Lam and Xun, they now seek to spread their faith to all."
