--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -457,9 +457,28 @@
 
  aminian_pantheon: "Aminian Pantheon"
  aminian_pantheon_religion_desc: ""
- henchu: "Henchu"
  aminian_pantheon_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  aminian_pantheon_rebels_title: "Religious"
  aminian_pantheon_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  aminian_pantheon_rebels_army: "$RELIGION$ Army"
  aminian_pantheon_rebels_demand: "Convert $COUNTRYNAME$"
+
+
+ sahilan: "Sahilan"
+ tamgarani: "Tamgarani"
+ tamgarani_religion_desc: ""
+ tamgarani_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ tamgarani_rebels_title: "Religious"
+ tamgarani_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ tamgarani_rebels_army: "$RELIGION$ Army"
+ tamgarani_rebels_demand: "Convert $COUNTRYNAME$"
+ dizaid: "Dizaid"
+
+ jambakan_pantheons: "Jambakan Pantheons"
+ jambakan_pantheons_religion_desc: ""
+ jambakan_pantheons_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ jambakan_pantheons_rebels_title: "Religious"
+ jambakan_pantheons_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ jambakan_pantheons_rebels_army: "$RELIGION$ Army"
+ jambakan_pantheons_rebels_demand: "Convert $COUNTRYNAME$"
+ seyita: "Seyita"
