--- a/localisation/TD_rebels_l_english.yml
+++ b/localisation/TD_rebels_l_english.yml
@@ -44,5 +44,7 @@
  zimahei_cult_rebels_name: "Zimahei Cult Rebels"
  aminian_pantheon_rebels_name: "Aminian Pantheon Rebels"
  bjateel_animism_rebels_name: "Bjateel Animism Rebels"
- cach_moi_rebels_name: "Cach Moi Rebels"
+ cach_moi_rebels_name: "Cách Mói Rebels"
  dejilobi_rebels_name: "Dejilobi Rebels"
+ tamgarani_rebels: "Tamgarani Rebels"
+ jambakan_pantheons_rebels: "Jambakan Pantheons Rebels"
