baduan prov names

--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -97,5 +97,5 @@
  pipobsa_region: "Pipobsa"
  tukyeung_region: "Tukyeung"
  azguramajal_region: "Azguramajal"
- upper_jambaka_region: "Upper Jambaka"
+ upper_jambaka_region: "Tenera"
  imamlayka_region: "Imamlayka"
