--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -104,8 +104,8 @@
  PROV103: "103"
  PROV104: "104"
  PROV105: "105"
- PROV106: "106"
- PROV107: "107"
+ PROV106: "Datayssa"
+ PROV107: "Arnar"
  PROV108: "Ihol"
  PROV109: "Wyrmegnac"
  PROV110: "Dobutap"
@@ -1002,8 +1002,8 @@
  PROV1001: "1001"
  PROV1002: "1002"
  PROV1003: "Mustir Mountains"
- PROV1004: "1004"
- PROV1005: "1005"
+ PROV1004: "Igbašan"
+ PROV1005: "Ilimun"
  PROV1006: "1006"
  PROV1007: "1007"
  PROV1008: "Azgur"
@@ -1081,9 +1081,9 @@
  PROV1080: "Talkimar" #blue haven
  PROV1081: "Tiggat"
  PROV1082: "Taeregh"
- PROV1083: "1083"
+ PROV1083: "Angutan"
  PROV1084: "Pantislat" #western bridge
- PROV1085: "1085"
+ PROV1085: "Taggunat"
  PROV1086: "Ibazran" #falcon rock
  PROV1087: "Zudagan" #settlement
  PROV1088: "Qastami Strait"
@@ -1145,7 +1145,7 @@
  PROV1144: "Yanlan Coast" 
  PROV1145: "1145"
  PROV1146: "1146"
- PROV1147: "1147"
+ PROV1147: "Xatani" #dangerous pass
  PROV1148: "Azgur"
  PROV1149: "1149"
  PROV1150: "1150"
@@ -4306,16 +4306,16 @@
  PROV4305: "4305"
  PROV4306: "4306"
  PROV4307: "4307"
- PROV4308: "4308"
- PROV4309: "4309"
- PROV4310: "4310"
- PROV4311: "4311"
- PROV4312: "4312"
+ PROV4308: "Tisnad"
+ PROV4309: "Rarf"
+ PROV4310: "Abašan"
+ PROV4311: "Aguliad" #boulder
+ PROV4312: "Igizan" #bull
  PROV4313: "4313"
- PROV4314: "4314"
+ PROV4314: "Amtaygul"
  PROV4315: "4315"
- PROV4316: "4316"
- PROV4317: "4317"
+ PROV4316: "Tifawat" #early morning
+ PROV4317: "Tizian" #pass
  PROV4318: "Tenera"
  PROV4319: "4319"
  PROV4320: "4320"
@@ -4343,11 +4343,11 @@
  PROV4342: "4342"
  PROV4343: "4343"
  PROV4344: "4344"
- PROV4345: "4345"
+ PROV4345: "Ilmuhirjan"
  PROV4346: "4346"
- PROV4347: "4347"
- PROV4348: "4348"
- PROV4349: "4349"
+ PROV4347: "Lanqal"
+ PROV4348: "Dedahan" #gold
+ PROV4349: "Ifaran" #caves
  PROV4350: "4350"
  PROV4351: "4351"
  PROV4352: "4352"
@@ -4375,11 +4375,11 @@
  PROV4374: "4374"
  PROV4375: "4375"
  PROV4376: "4376"
- PROV4377: "4377"
+ PROV4377: "Ivragan"
  PROV4378: "4378"
- PROV4379: "4379"
- PROV4380: "4380"
- PROV4381: "4381"
+ PROV4379: "Danat"
+ PROV4380: "Maluxa"
+ PROV4381: "Imara" #border
  PROV4382: "4382"
  PROV4383: "4383"
  PROV4384: "4384"
