--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -35,6 +35,7 @@
 
  uzkolian_toll: "Uzkolian Toll"
  hre_imperial_road: "Imperial Road"
+ desc_hre_imperial_road: "This province belongs to the long network of roads built by the Saelian Empire to secure trade routes and increase the flow of goods."
  mezonian_toll: "Mezonian Toll"
  WGH_quarters: "WGH Quarters"
  desc_WGH_quarters: "Wedlanska Gildija Handlowa owns many quarters in this province."
